--- a/static/gpkg_manager/package.json
+++ b/static/gpkg_manager/package.json
@@ -20,6 +20,7 @@
         "react-paginate": "^5.1.0",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.2.2",
+        "react-select": "^1.2.1",
         "react-spinkit": "^3.0.0",
         "react-virtualized-select": "^3.1.3",
         "redux": "^4.0.0",
